test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-nonnil-owned.chpl
//  lhs: borrowed!  rhs: owned!  ok

class MyClass {
  var x: int;
}

var rhs = new owned MyClass();

var lhs: borrowed MyClass = rhs;


